2005-08-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_const_ok_for_constraint_p): Add 'P'
	constraint.
	(legitimate_reload_constant_p): Fix handling of lliXX operands.
	Accept double-word constants that can be split.
	* config/s390/s390.md ("movti"): Use 'P' constraint.
	("*movdi_31", "*movdf_31"): Likewise.

2005-08-14  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/22615
	
	* tree-ssa-structalias.c (solution_set_add): Handle
	first_vi_for_offset returning NULL. 
	(do_da_constraint): Ditto.
	(do_sd_constraint): Ditto.
	(do_ds_constraint): Ditto
	(find_func_aliases): Ditto.
	(build_constraint_graph): RHS is allowed be ANYTHING.
	(first_vi_for_offset): Return NULL if we couldn't find anything at
	the offset.
	
2005-08-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_canonicalize_comparison): Prefer register
	over memory as first operand.

2005-08-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/23360
	* config/i386/crtfastmath.c (set_fast_math): Check if DAZ is
	available for setting it.

2005-08-14  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/23320
	* tree-data-ref.c (base_addr_differ_p): Add comment. Check 
	data-refs' types instead of base object nullness. Add check for 
	pointer type data-refs before first location comparison. Remove 
	assert.

2005-08-14  Andreas Schwab  <schwab@suse.de>

	* doc/md.texi (Machine Constraints): Fix misplaced @end table.

2005-08-13  James E Wilson  <wilson@specifix.com>

	* doc/cpp.texi (__SSP__, __SSP_ALL__): Document.
	* doc/invoke.texi (-Wstack-protector, -fstack-protector,
	-fstack-protector-all, --param ssp-buffer-size): Document.
	(-Wvariadic-macros): Alphabetize.
	(-fsched-stalled-insns-dep): Add missing 'f'.

	* c-cppbuiltin.c (c_cpp_builtins): Add comment for flag_stack_protect
	macros.

2005-08-13  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.h (EXTRA_CONSTRAINT): Add 'a' for indexed
	or indirect address operand.